                                 Muldis::D
                                  Changes
---------------------------------------------------------------------------

2010-07-xx

    * Muldis::D version 0.132.0 is released on CPAN as
    Muldis-D-0.132.0.tar.gz.

    * (PTMD_STD.pod)  A backslash pair used inside a long string/etc
    literal, to support splitting the literal over multiple code lines, now
    surrounds mandatory whitespace rather than optional whitespace.  In the
    grammar, this pair is now called a "splitter" rather than an "unspace".
    (Another backslash pair, outside strings/etc, is still an "unspace".)

    * (PTMD_STD.pod)  Removed the simple char escape seq for "space" char,
    which had limited utility; instead of "\s", one can say "\c<F;20>".

    * (PTMD_STD.pod)  Updated any of the simple char escape sequences that
    differed from those of typical other languages so that they are the
    same instead.  The escape sequences for the 5 characters [\,',",`,#]
    are now simply the same characters with a leading backslash, instead of
    a backslash+alpha; they used to be [\b,\a,\q,\g,\h].  A consequence
    is that a string may now contain the same literal char as is used to
    delimit that string, like typ langs, where this used to be disallowed.

2010-06-23

    * Muldis::D version 0.131.0 is released on CPAN as
    Muldis-D-0.131.0.tar.gz.

    * (PTMD_STD)  Fixed semantic-reversing typo.

    * (Types.pod, Types_Catalog.pod, PTMD_STD.pod, HDMD_Perl[6|5]_STD.pod,
    Basics.pod, Relation.pod, Set.pod)  Renamed the nonscalar types
    "Single","DHSingle" to "Just","DHJust" and the corresponding type name
    prefix from "single_of." to "just_of." and the corresponding concrete
    syntax value literal kind from "Single" to "Just".  So now the triple
    of related types/values "Maybe","Just","Nothing" match the names of
    their counterparts in the Haskell language.  So now the canonical