@@ -323,6 +323,11 @@ the input relations don't need to have the same headings.
 
 ----------
 
+* In PTMD_STD, consider further changes to how character escape sequences
+in strings/etc are done.  For example, whether the simple escape sequence
+for each string delimiter char may be used in all kinds of strings (as they
+are now) or just in strings having the same delim char as is being escaped.
+
 * Consider updating PTMD_STD only to add more precedence levels.  For
 example by splitting math into exponentiative, multiplicative, additive,
 these being crossed with dyadic-infox, reducing-infix.  Or for example by
