@@ -9,7 +9,7 @@ Muldis D generic relational operators
 
 =head1 VERSION
 
-This document is Muldis::D::Core::Relation version 0.131.0.
+This document is Muldis::D::Core::Relation version 0.132.0.
 
 =head1 PREFACE
 
