@@ -9,7 +9,7 @@ Muldis D extension for temporal data types and operators
 
 =head1 VERSION
 
-This document is Muldis::D::Ext::Temporal version 0.131.0.
+This document is Muldis::D::Ext::Temporal version 0.132.0.
 
 =head1 PREFACE
 
