@@ -2,10 +2,15 @@
                                   Changes
 ---------------------------------------------------------------------------
 
-2010-07-xx
+2010-07-07
 
     * Muldis::D version 0.132.0 is released on CPAN as
     Muldis-D-0.132.0.tar.gz.
+
+    * This release features some reworking of char escape sequences.  The
+    prior way of doing this could give the false impression that PTMD_STD
+    couldn't be single-pass parsed; the new way should avoid that problem,
+    and also result in string literals that are easier for people to read.
 
     * (PTMD_STD.pod)  A backslash pair used inside a long string/etc
     literal, to support splitting the literal over multiple code lines, now
